# jornada_testes

./: 404.html  index.html  objects.inv  pyproject.toml
data/: arquivo_excel.xlsx
docs/: index.md
search/: search_index.json
src/: app.py  contrato.py  frontend.py
tests/: test_app.py
