[tool.poetry]
name = "jornada-dados-2024"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <70807807+rafaelpanegassi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.17.2"
pytest = "^8.0.1"
streamlit = "^1.31.1"
pandas = "^2.2.0"
numpy = "^1.26.4"
taskipy = "^1.12.2"
pydentic = "^0.0.1.dev3"
openpyxl = "^3.1.2"
pydantic = {extras = ["email"], version = "^2.6.1"}
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.5.10"

[tool.taskipy.tasks]
run = "streamlit run src/app.py"
test = "pytest tests -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

